force-app/main/default/objects/Inventario__c/fields/Bodega__c.field-meta.xml
<CustomField>
    <fullName>Bodega__c</fullName>
    <label>Bodega</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSTGO_PP</fullName>
            </value>
            <value>
                <fullName>BTALLER</fullName>
            </value>
            <value>
                <fullName>BTEXTER</fullName>
            </value>
            <value>
                <fullName>CMA10</fullName>
            </value>
            <value>
                <fullName>CMC10</fullName>
            </value>
            <value>
                <fullName>CMP10</fullName>
            </value>
            <value>
                <fullName>ST10</fullName>
            </value>
            <value>
                <fullName>STA10</fullName>
            </value>
            <value>
                <fullName>STC10</fullName>
            </value>
            <value>
                <fullName>STCM10</fullName>
            </value>
            <value>
                <fullName>STCP10</fullName>
            </value>
            <value>
                <fullName>STP10</fullName>
            </value>
            <value>
                <fullName>STPROD</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
                <isActive>false</isActive>
                <label>AA</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <isActive>false</isActive>
                <label>BA</label>
            </value>
            <value>
                <fullName>BANTOF</fullName>
                <isActive>false</isActive>
                <label>BANTOF</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <isActive>false</isActive>
                <label>BC</label>
            </value>
            <value>
                <fullName>BCONCEP</fullName>
                <isActive>false</isActive>
                <label>BCONCEP</label>
            </value>
            <value>
                <fullName>BCP</fullName>
                <isActive>false</isActive>
                <label>BCP</label>
            </value>
            <value>
                <fullName>BP</fullName>
                <isActive>false</isActive>
                <label>BP</label>
            </value>
            <value>
                <fullName>BPC</fullName>
                <isActive>false</isActive>
                <label>BPC</label>
            </value>
            <value>
                <fullName>BPROYECT</fullName>
                <isActive>false</isActive>
                <label>BPROYECT</label>
            </value>
            <value>
                <fullName>BPTOMONT</fullName>
                <isActive>false</isActive>
                <label>BPTOMONT</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <isActive>false</isActive>
                <label>BR</label>
            </value>
            <value>
                <fullName>BRLE</fullName>
                <isActive>false</isActive>
                <label>BRLE</label>
            </value>
            <value>
                <fullName>BRT</fullName>
                <isActive>false</isActive>
                <label>BRT</label>
            </value>
            <value>
                <fullName>BSTGO_RE</fullName>
                <isActive>false</isActive>
                <label>BSTGO_RE</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <isActive>false</isActive>
                <label>BT</label>
            </value>
            <value>
                <fullName>BTR10</fullName>
                <isActive>false</isActive>
                <label>BTR10</label>
            </value>
            <value>
                <fullName>CMCP10</fullName>
                <isActive>false</isActive>
                <label>CMCP10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>