force-app/main/default/objects/Inventario__c/fields/Comprometido__c.field-meta.xml
<CustomField>
    <fullName>Comprometido__c</fullName>
    <inlineHelpText>Producto(s) en bodega pero ya asociado(s) a venta.</inlineHelpText>
    <label>Comprometido</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>