force-app/main/default/objects/Inventario__c/fields/Disponible__c.field-meta.xml
<CustomField>
    <fullName>Disponible__c</fullName>
    <formula>OnOrder__c + OnHand__c + Comprometido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>