force-app/main/default/objects/Inventario__c/fields/OnHand__c.field-meta.xml
<CustomField>
    <fullName>OnHand__c</fullName>
    <label>En stock</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>