force-app/main/default/objects/Inventario__c/fields/OnOrder__c.field-meta.xml
<CustomField>
    <fullName>OnOrder__c</fullName>
    <inlineHelpText>Producto(s) fuera de stock, pero ya ingresado(s) por orden de compra.</inlineHelpText>
    <label>En transito</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>